Fixed the Invalid notebook thing

--- a/Credit card fraud.ipynb
+++ b/Credit card fraud.ipynb
@@ -1327,6 +1327,7 @@
     "- Tree pruning\n",
     "- Handles highly imbalanced data very well\n",
     "- good for PCA-Transformed data\n",
+    "- It implies L1 and L2 regularization"
    ]
   },
   {
